@@ -6,6 +6,7 @@ New features
 
 Enhancements
  - [core] improved event initation for all day events (#4145)
+ - [web] improved interface refresh time with external IMAP accounts
 
 Bug fixes
  - [web] fixed attachment path when inside multiple body parts
